--- a/src/resources/main.fxml
+++ b/src/resources/main.fxml
@@ -1,39 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import edu.cnm.deepdive.langton.view.TerrainView?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.Label?>
 <GridPane xmlns="http://javafx.com/javafx"
   xmlns:fx="http://javafx.com/fxml"
   fx:controller="edu.cnm.deepdive.langton.controller.MainController"
-  stylesheets="@style.css">
+  stylesheets="@styles.css">
 
   <columnConstraints>
     <ColumnConstraints
-      percentWidth="33.3"/>
+      percentWidth="25"/>
     <ColumnConstraints
-      percentWidth="33.3"/>
+      percentWidth="25"/>
+    <ColumnConstraints
+      percentWidth="25"/>
+  </columnConstraints>
 
-</columnConstraints>
-
-  <TerrainView
-    fx:id="terrainView"
+  <Pane
+    id="frame"
     GridPane.rowIndex="0"
     GridPane.columnIndex="0"
-    GridPane.columnSpan="3"
+    GridPane.columnSpan="4"
     GridPane.halignment="CENTER"
-    GridPane.valignment="CENTER"
-    width="600"
-    height="600"/>
+    GridPane.valignment="CENTER">
+
+    <TerrainView
+      fx:id="terrainView"
+      width="600"
+      height="600"/>
+
+  </Pane>
 
   <Slider
     fx:id="populationSize"
-    min ="1"
-    max = "12"
+    min="1"
+    max="12"
     majorTickUnit="1"
     minorTickCount="0"
     snapToTicks="true"
@@ -41,18 +49,39 @@
     showTickLabels="false"
     blockIncrement="1"
     GridPane.rowIndex="1"
-    GridPane.columnIndex="0"
-    GridPane.halignment="CENTER"
+    GridPane.columnIndex="1"
+    GridPane.halignment="LEFT"
     GridPane.valignment="CENTER"
     value="1"/>
+
+  <Label
+    id="populationSizeLabel"
+    labelFor="$populationSize"
+    mnemonicParsing="true"
+    GridPane.rowIndex="1"
+    GridPane.columnIndex="0"
+    GridPane.halignment="RIGHT"
+    GridPane.valignment="CENTER"
+    text="%population_label"/>
 
   <ToggleButton
     fx:id="runToggle"
     GridPane.rowIndex="1"
-    GridPane.columnIndex="1"
+    GridPane.columnIndex="2"
     GridPane.halignment="CENTER"
     GridPane.valignment="CENTER"
     text="%start_text"
-  onAction="#toggleRun"/>
+    onAction="#toggleRun"
+    styleClass="button"/>
+
+<!--  <Button-->
+<!--    fx:id="resetter"-->
+<!--    GridPane.rowIndex="1"-->
+<!--    GridPane.columnIndex="3"-->
+<!--    GridPane.halignment="CENTER"-->
+<!--    GridPane.valignment="CENTER"-->
+<!--    text="%reset_text"-->
+<!--    onAction="#reset"-->
+<!--    styleClass="button"/>-->
 
 </GridPane>
